test/Fail/BuiltinTrueFalseDistinct.err
BuiltinTrueFalseDistinct.agda:7.1-27: error: [GenericError]
Cannot bind TRUE and FALSE to the same constructor
when checking the pragma BUILTIN FALSE true
